--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
-*{
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
-}
+
+@import url('https://fonts.googleapis.com/css?family=Lobster');
 
 body{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
 
 .wrapper {
-    width: 1100px;
-    margin: auto;
+    width: 100%;
+    margin: auto ;
     position: relative;
 }
 
@@ -23,20 +20,20 @@ body{
     float: left;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #F6F6F6;
+    padding-left: 30px;
+    text-decoration: none;
 }
 
 .menu {
     float: center;
     padding: 0px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
 nav {
     margin: auto;
-    display: flex;
-    line-height: 40px; /*agar posisi dari bagian atas dan bagian bawah bisa rata dari gifnya */
-    position: sticky;
-    position: -webkit-sticky; /* untuk safari */
+    line-height: 50px; /*agar posisi dari bagian atas dan bagian bawah bisa rata dari gifnya */
     top: 0;
     background-color: #2C272E;
     z-index: 1;
@@ -59,23 +56,22 @@ nav ul li a {
     font-weight: bold;
     text-align: center;
     padding: 0px 16px 0px 16px;
+    text-decoration: none;
 }
 
 nav ul li a.signup {
-    padding: 0px 0px 0px 315px;
+    float: right;
+    padding: 0px 0px 0px 500px;
 }
 
 nav ul li a:hover {
     color: #FF9F45;
 }
 
-
-
 section {
     margin: auto;
     display: flex;
     margin-bottom: 0px;
-    float: center;
 }
 
 .kolom {
@@ -92,44 +88,62 @@ section {
     line-height: 50px;
 }
 
+.coverBg { 
+    width: 100%;
+    height: 100vh;
+    background-image: url('main-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    }
 
 h1 {
-    font-size: 65px;
-    font-weight: 700;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: bold;
+    font-style: normal;
     color: #F6F6F6;
     width: 100%;
     line-height: 0px;
-    padding: 120px 0px 0px 140px;
+    padding-top: 10%;
+    letter-spacing: 0.3rem;
+    
 }
 h2 {
-    font-size: 25px;
-    font-weight: 500;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: normal;
+    font-family: Arial, Helvetica, sans-serif;
     color: #F6F6F6;
     width: 100%;
     line-height: 50px;
-    padding: 120px 16px 0px 350px;
+    padding-top: 50px;
 }
 
 h3 {
+    display: flex;
+    justify-content: center;
     font-size: 20px;
     font-weight: 800;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #F6F6F6;
     width: 100%;
     line-height: 50px;
-    padding: 80px 0px 0px 490px;
+    padding-top: 50px;
 }
 
 h4 {
+    display: flex;
+    justify-content: center;
     font-size: 15px;
     font-weight: 800;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #F6F6F6;
-    width: 100%;
     line-height: 50px;
-    padding: 80px 0px 0px 535px;
+    padding-top: 50px;
 }
 
 a.playnow {
@@ -140,9 +154,555 @@ a.playnow {
     cursor: pointer;
     color:black;
     font-weight: bold;
+    text-decoration: none;
 }
 
 
 a.playnow:hover {
     background: #F7ECDE;
 }
+
+p {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 20px;
+    font-weight: 10px;
+    font-family: helvetica;
+    color: #F6F6F6;
+    line-height: 50px;  
+    padding-left: 50px;
+    padding-top: 50px;
+}
+
+h5 {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 50px;
+    font-weight: 500;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #F6F6F6;
+    width: 100%;
+    padding-left: 50px;
+    padding-top: 0px;
+}
+
+
+
+h7 {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    color: #F6F6F6;
+    font-weight: 800;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #F6F6F6;
+    width: 100%;
+    line-height: 50px;
+    padding-top: 0px;
+}
+
+
+
+
+.games {
+    width: 100%;
+    height: 100vh;
+    background-image: 
+        radial-gradient(80% 60% at 30% 20%,
+        rgba(255, 180, 52, 0) 0%,
+        rgba(0, 0, 0, 0) 0%,
+        #000000 115%),
+        url('the-games-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.carousel-inner {
+    width: 600px;
+    height: 300px;
+    position: absolute;
+    left: 500px;
+}
+
+.carousel-indicators {
+    position: absolute;
+    top: 230px;
+    left: 250px;
+}
+
+.carousel-control-prev {
+    position: absolute;
+    top: 130px;
+    left: 370px;
+}
+
+.carousel-control-next {
+    position: absolute;
+    top: 130px;
+    right: 100px;
+}
+
+.features {
+    width: 100%;
+    height: 100vh;
+    background-image: 
+        radial-gradient(80% 60% at 30% 20%,
+        rgba(255, 180, 52, 0) 0%,
+        rgba(0, 0, 0, 0) 0%,
+        #000000 115%),
+        url('features.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 10%;
+    background-position: center;
+}
+
+h10 {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 500;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #F6F6F6;
+    padding-left: 40%;
+    padding-top: 0px;
+}
+
+
+h6 {
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-weight: 500;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #F6F6F6;
+    padding-left: 40%;
+    padding-top: 30px;
+
+}
+
+h12 {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #F6F6F6;
+    padding-left: 60%;
+    padding-top: 5px;
+}
+
+
+h11 {
+    display: flex;
+    font-size: 30px;
+    font-weight: 500;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #FF9F45;
+    padding-left: 60%;
+    padding-top: 20px;
+}
+
+.system {
+    width: 100%;
+    height: 100vh;
+    background-image: 
+    radial-gradient(30% 75% at 65% 40%,
+    rgba(0, 0, 52, 0) 0%,
+    rgba(10, 10, 10, 0.50) 50%,
+    #000 95%),
+        url('requirements.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+
+h13 {
+    display: flex ;
+    justify-content: center;
+    color: white;
+    font-size: 1.3rem;
+    margin-bottom: -1.5rem;
+}
+
+h14 {
+    font-size: 3rem;
+    display: flex ;
+    color: white;
+    line-height: 3rem;
+    padding-left: 15%;
+}
+
+.sysreq-table {
+    position: absolute;
+    left: -150px;
+    max-width: 600px;
+    max-height: 50%;
+    margin-left: 350px;
+}
+
+.req-info {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #FBB341;
+    font-style: normal;
+    font-size: 1.5rem;
+    padding-top: 10px;
+}
+
+.req-info2 {
+    color: white;
+    font-family: 'Open sans', Arial, Helvetica, sans-serif;
+    line-height: 1.5rem;
+    padding-top: 0px;
+}
+
+.tab-bor th {
+    border: #212226 1px solid !important;
+}
+
+.tab-bor td {
+    border: #212226 1px solid !important;
+}
+
+
+.score {
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    background-image: url(top-score-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 10%;
+}
+
+.score-content {
+    max-width: 100vh !important;
+}
+
+.score-left-side {
+    position: absolute;
+    top: 2700px;
+    left: 10px;
+}
+
+
+.score-right-side {
+    position: absolute;
+    top: 2700px;
+    left: 800px;
+}
+
+.score-content-title,
+.score-content-info1 {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.score-content-info2 {
+    position: absolute;
+    top: 110px;
+}
+
+.score-content-title {
+    font-size: 40px;
+    letter-spacing: 0.2rem;
+}
+
+.score-content-info1 {
+    font-size: 1rem;
+    line-height: 0rem;
+}
+
+.score-content-info2 {
+    font-size: 1rem;
+}
+
+.score-content-btn {
+    margin-top: 10px;
+    margin-left: 40px;
+    background-color: #FBB341;
+    border: none;
+    width: 12rem;
+    height: 3rem;
+    font-weight: bold;
+    position: absolute;
+    top: 200px;
+}
+
+.score-content-btn:hover {
+    background-color: #E0A800;
+}
+
+.card {
+    background-color: #1D1E1E !important;
+    width: 20rem !important;
+    height: 10rem!important;;
+    padding-top: 0px!important;
+}
+
+.icon {
+    position: absolute;
+    right: 20px;
+}
+
+#card-1:hover,
+#card-2:hover,
+#card-3:hover {
+    box-shadow: 0.1rem 0.1rem #FBB341;
+}
+
+.card-title {
+    position: absolute;
+    top: -40px;
+    left: 55px;
+    color: #FBB341 !important;
+    font-size: 15px;
+}
+
+.card-info-top {
+    display: flex !important;
+    flex-direction: row !important;
+    align-items: flex-start !important;
+}
+
+.card-subtitle {
+    color: #A6A6A6 !important;
+    position: absolute;
+    top: -20px;
+    left: 55px;
+    font-size: 10px;
+}
+
+.card-date {
+    color: #A6A6A6 !important;
+    position: absolute;
+    top: 70px;
+    left: -20px;
+    font-size: 15px;
+}
+
+.card-text {
+    color: #A6A6A6 !important;
+    position: absolute;
+    top: 20px;
+    left: -20px;
+    font-size: 13px;  
+}
+
+.card-text2 {
+    color: #A6A6A6 !important;
+    position: absolute;
+    top: 40px;
+    left: -20px;
+    font-size: 13px;  
+}
+
+
+#card-1 {
+    margin-left: 100px !important;
+    }
+
+#card-3 {
+    margin-left: 100px !important;
+    }
+}
+
+.gamer {
+    margin-left: 20px;
+}
+
+.gamer-pic {
+    border-radius: 50%;
+    box-shadow: 8px 4px #F9B23E;
+    margin-right: 0.5rem;
+
+}
+
+.gamer-name {
+    margin-bottom: 0.1rem !important;
+}
+
+
+.footer {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 10%;
+    padding-right: 5%;
+}
+
+
+.footer-content-left {
+    text-align: center;
+}
+
+.footer-content-right {
+    color: white;
+}
+
+
+.footer-content-info {
+    position: absolute;
+    top: 3350px;
+    font-size: 20px;
+    
+}
+
+.footer-content-call1 {
+    font-size: 50px;
+    position: absolute;
+    top: 3420px;
+}
+
+.footer-content-call2 {
+    position: absolute;
+    top: 3470px;
+    font-size: 50px;
+}
+
+.footer-content-main {
+    position: absolute;
+    top: 3550px;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: justify;
+    padding-right: 50px;
+}
+
+.footer-content-subs {
+    margin-top: 300px;
+    font-size: 20px;
+    margin-left: 50px;
+}
+
+.footer-subs-email {
+    background-color: #1D1E1E;
+    border: none;
+    color: #FBB341;
+    width: 250px;
+    height: 40px;
+    text-align: center;
+    border-radius: 0.2rem;
+    vertical-align: middle;
+}
+
+.footer-subs-btn {
+    width: 250px;
+    height: 40px;
+    background-color: #FBB341;
+    color: black;
+    border: none;
+    border-radius: 0.2rem;
+    font-weight: bold;
+    font-size: 1rem;
+    vertical-align: middle;
+}
+
+.footer-subs-btn:hover {
+    background-color: #f7f4ec;
+}
+
+#footer-nav {
+    display: flex;
+    justify-content: end;
+    justify-content: flex-end;
+    text-align: center;
+}
+
+#footer-nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: normal;
+    letter-spacing: 1px;
+    
+}
+
+#footer-nav a:hover {
+    color: #dfb80c;
+}
+
+.facebook, .twitter, .youtube, .twitch {
+    padding-right: 20px;
+    padding-left: 10px;
+    background-color:black;
+}
+
+.facebook:hover {
+    background-color: #1C9CEB;
+}
+
+.twitter:hover {
+    background-color: #1C9CEB;
+}
+
+.youtube:hover {
+    background-color: white;
+}
+
+.twitch:hover {
+    background-color: #8D45F7;
+}
+
+.hr-display-below-992 {
+    visibility: hidden;
+}
+
+hr {
+    background-color: white;
+}
+
+.card-subtitle-footer {
+    font-size: 15px;
+}
+
+.footer-credit-link, .footer-credit-link a {
+    color: white;
+    text-decoration: none;
+    font-size: 12px;
+    text-align: end;
+    text-indent: 10px;
+}
+
+.footer-credit-link a:hover {
+    color: #F9B23E;
+}
+
+@media screen and (max-width: 754px) {
+    html, body {
+        overflow-x: hidden;
+        display: flexbox;
+    }
+    .header {
+        height: 100vh;
+    }
+    
+    nav ul li a {
+        font-size: 15px;
+    }
+    h1 {
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .login {
+        position: absolute;
+        left: 70vh;
+        font-size: 18px;
+    }
+
+    .signup {
+        position: absolute;
+        left: 12vh;
+        font-size: 18px;
+
+    }
+
+  }
